deploy/k8s/blog-next-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blog-next
spec:
  selector:
    matchLabels:
      app: blog-next
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 100%
      maxUnavailable: 25%
  template:
    metadata:
      labels:
        app: blog-next
    spec:
      containers:
        - image: schala/blog-next
          name: app
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 100m
              memory: 100M
            limits:
              cpu: 1000m
              memory: 2000M
          readinessProbe:
            httpGet:
              path: /life
              port: 3000
            initialDelaySeconds: 2
            periodSeconds: 3
          livenessProbe:
            httpGet:
              path: /life
              port: 3000
            initialDelaySeconds: 2
            periodSeconds: 3
