deploy/k8s/blog-next-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: blog-next-svc
spec:
  ports:
    - name: next
      port: 3000
  selector:
    app: blog-next
  type: ClusterIP
